<resources>
    <string name="app_name">Customer Cards App</string>
    <string name="text_search">Поиск</string>
    <string name="title_activity_create_card">CreateCard</string>
    <string name="card_name">ФИО</string>
    <string name="card_phone_number">Номер телефона</string>
    <string name="card_date_of_birth">Дата рождения</string>
    <string name="card_new_customer">Новый клиент</string>
    <string name="menu_update">Изменить</string>
    <string name="menu_delete">Удалить</string>
    <string name="card_notes_type_note_here">Введите заметку здесь...</string>
    <string name="delete_card">Удалить карточку</string>
    <string name="delete">Удалить</string>
    <string name="delete_card_message">Вы уверенны, что хотите удалить карточку?</string>
    <string name="cancel">Отмена</string>
    <string name="phone_template">+XXXXXXXXXX</string>
    <string name="date_template">дд.мм.гггг</string>
    <string name="save">Сохранить</string>
</resources>