<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_card"
    android:backgroundTint="@color/colorSecondary"
    tools:context=".activities.CreateCardActivity">

    <!--ImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/background_back_button"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_back"
        app:tint="@color/colorBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" /-->

    <!--ImageView
        android:id="@+id/imageDone"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/background_done_button"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/ic_done"
        app:tint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@id/imageBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageBack" /-->

    <EditText
        android:id="@+id/inputCardName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/background_text_field"
        android:padding="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/card_name"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="text"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorTertiary"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputCardPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/background_text_field"
        android:padding="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/card_phone_number"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="phone"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorTertiary"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputCardName" />

    <EditText
        android:id="@+id/inputCardDateOfBirth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/background_text_field"
        android:padding="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/card_date_of_birth"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="date"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorTertiary"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@id/inputCardPhoneNumber" />

    <TextView
        android:id="@+id/textSaveCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/montserrat_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="Сохранить"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputCardDateOfBirth" />

    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/montserrat_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textSaveCard"
        app:layout_constraintTop_toBottomOf="@id/inputCardDateOfBirth"/>

</androidx.constraintlayout.widget.ConstraintLayout>